[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/TrashCan.gd" type="Script" id=1]
[ext_resource path="res://sprites/tiles/trash can.png" type="Texture" id=2]
[ext_resource path="res://sprites/tiles/fire!.png" type="Texture" id=3]
[ext_resource path="res://sounds/disaster.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 6 )

[node name="TrashCan" type="StaticBody2D"]
script = ExtResource( 1 )
trash_can_texture = ExtResource( 2 )
fire_texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="CombustTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DisasterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 20000.0
attenuation = 0.217638
[connection signal="timeout" from="CombustTimer" to="." method="_on_CombustTimer_timeout"]
